@@ -5,6 +5,8 @@ import com.bretth.osmosis.core.change.ChangeDeriverFactory;
 import com.bretth.osmosis.core.buffer.ChangeBufferFactory;
 import com.bretth.osmosis.core.buffer.EntityBufferFactory;
 import com.bretth.osmosis.core.filter.BoundingBoxFilterFactory;
+import com.bretth.osmosis.core.merge.ChangeMergerFactory;
+import com.bretth.osmosis.core.merge.EntityMergerFactory;
 import com.bretth.osmosis.core.misc.NullChangeWriterFactory;
 import com.bretth.osmosis.core.misc.NullWriterFactory;
 import com.bretth.osmosis.core.mysql.MysqlChangeReaderFactory;
@@ -63,5 +65,7 @@ public class TaskRegistrar {
 		TaskManagerFactory.register("write-null-change", new NullChangeWriterFactory());
 		TaskManagerFactory.register("buffer", new EntityBufferFactory());
 		TaskManagerFactory.register("buffer-change", new ChangeBufferFactory());
+		TaskManagerFactory.register("merge", new EntityMergerFactory());
+		TaskManagerFactory.register("merge-change", new ChangeMergerFactory());
 	}
 }
